Open "java.io" and "java.nio" packages for reflection